# distormx

./: .gitignore  CMakeLists.txt  mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
examples/: main.cpp
src/: OS.h
